<?xml version="1.0"?>
<package format="2">

  <name>obm</name>
  <version>0.3.0</version>
  <description>ROS Package of Team SINGABOAT-VRX for Participation in Virtual RobotX (VRX) Competition 2022</description>

  <maintainer email="samaktanmay@gmail.com">Tanmay Vilas Samak</maintainer>
  <maintainer email="samakchinmayvilas@gmail.com">Chinmay Vilas Samak</maintainer>

  <license>BSD</license>

  <!-- <url type="repository">https://github.com/Tinker-Twins/SINGABOAT-VRX</url> -->

  <author email="samaktanmay@gmail.com">Tanmay Vilas Samak</author>
  <author email="samakchinmayvilas@gmail.com">Chinmay Vilas Samak</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>can_msg</build_depend>



  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>can_msg</exec_depend>




</package>
